move integration tests to a special maven profile